# Sistema-de-Gest-o-REVISA

./: .env.example  .gitignore  ANALISE_ESPECIALISTA_PRECIFICACAO_POR_COMPLEXIDADE.md  ARQUITETURA_PARA_LEIGOS.md  Documento Tecnico Revisa Arquitetura Completa.docx  Documento Tecnico Revisa Arquitetura Execucao.docx  LISTAGEM_COMPLETA_RELATORIOS.md  Makefile  Manifesto Final Cutover Tecnico Revisa.docx  PRECIFICACAO_SISTEMA_REVISA.md  PROPOSTA_COMERCIAL_SAAS_24MESES.md  Planilha de Requisição de Compras - Projeto CASA.xlsx  README.md  REVISA_PRICING_DETAILED_BREAKDOWN.md  REVISA_PRICING_EXECUTIVE_SUMMARY.md  REVISA_PRICING_VISUAL.md  REVISA_PROPOSTA_RESUMO_EXECUTIVO.md  REVISA_RECLASSIFICACAO_PRECIFICACAO_OTIMIZADA.md  Revisa Backend Operational Pack.docx  Revisa Deployment Package Backend.docx  Revisa Execution Pack Artifacts.docx  Revisa Repo Package Ready To Paste.docx  SISTEMA DE GESTÃO INTEGRADA REVISA.docx  docker-compose.yml  documento_tecnico_execucao.md  documento_tecnico_revisa_arquitetura_completa.md  folder_revisa_canvas.html  manifesto_final_cutover_tecnico_revisa.md  prestacao-contas.csv  render.yaml  revisa_backend_operational_pack.md  revisa_deployment_package_backend.md  revisa_execution_pack_artifacts.md  revisa_repo_package_ready_to_paste.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_iam_schema.py  0002_create_core_schema.py  0003_create_territory_schema.py  (+13 more)
apps/api/app/: main.py
apps/api/scripts/: bootstrap_admin.py  seed_initial_data.py
apps/web/: app.js  (+2 more)
(+96 files in other folders)
